--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "A proactive and ambitious Ph.D. student at Anhui University who is unwilling to settle for mediocrity."
   location         : "Hefei, China"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "https://scholar.google.com.hk/citations?hl=zh-CN&user=R1ktncwAAAAJ"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
