--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ziwen Wang(王子文)"
-  avatar           : "twelve.png"
+  avatar           : "twelve.jpg"
   bio              : "A proactive and ambitious Ph.D. student at Anhui University who is unwilling to settle for mediocrity."
   location         : "Hefei, China"
   employer         :
